src/objects/Category_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Astrum_Application__c</fullName>
        <inlineHelpText>Astrum Application configuration belongs to</inlineHelpText>
        <label>Astrum Application</label>
        <referenceTo>Astrum_Application__c</referenceTo>
        <relationshipLabel>Category Configuration</relationshipLabel>
        <relationshipName>Category_Configuration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bin__c</fullName>
        <description>Astrum PM Bin</description>
        <label>Bin</label>
        <picklist>
            <picklistValues>
                <fullName>Kickoff Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Conduit Run and Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Prep Sheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ SREC Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permit Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Notice to Construct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Reservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA Submitted Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice at Start of Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel and Inverter Serial Numbers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pull List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower Warranty Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enphase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Completion Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proof of Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Subst. Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Interconnect Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SREC Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant Documents</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Order_In_Bin__c</fullName>
        <inlineHelpText>Order of Category in Bin</inlineHelpText>
        <label>Category Order In Bin</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Bin__c</controllingField>
            <picklistValues>
                <fullName>3 Line diagram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptance Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affidavit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Application Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Electrical Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Utility Interconnect Part 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array Detail Photos: Clearance, Pitch, Clamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB Panel, Interconnect, Disconnect Box Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning and Production Verification Checklists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commissioning Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit (Roof, Interior, Exterior) Photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit Run and Layout - Customer Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered Materials Photo (NRG only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawing Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drivers License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Drawings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Permit Application</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Bin_State__c</fullName>
        <description>Bin State - Submitted, Approved</description>
        <label>Document Bin State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Date_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Date Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Types_Restriction__c</fullName>
        <inlineHelpText>Restriction on document types allowed</inlineHelpText>
        <label>Document Types_Restriction</label>
        <picklist>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerPoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sketch Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Electrician_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installer/Electrician Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Allowed__c</fullName>
        <inlineHelpText>Maximum number of documents allowed in this category</inlineHelpText>
        <label>Maximum Allowed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Required__c</fullName>
        <label>Minimum Required</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Category Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Astrum_Application__c</columns>
        <columns>Bin__c</columns>
        <columns>Category__c</columns>
        <columns>Category_Order_In_Bin__c</columns>
        <columns>Document_Bin_State__c</columns>
        <columns>Document_Date_Required__c</columns>
        <columns>Document_Types_Restriction__c</columns>
        <columns>Field_Name__c</columns>
        <columns>Installer_Electrician_Access__c</columns>
        <columns>Maximum_Allowed__c</columns>
        <columns>Minimum_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Category Config ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>